--- a/sideBar.css
+++ b/sideBar.css
@@ -11,7 +11,10 @@ html{
     background-color: #534B52	;
     background-image: url(./Img/paper.jpg);
     box-shadow: inset 0px 0px 50px 10px #11101d;
+    scrollbar-width: none;
 }
+
+
 
 .sidebar{
     margin-left: -10px;
@@ -26,9 +29,10 @@ html{
     transition: all 0.5s ease;
     box-shadow: 0px 0px 50px 10px #11101d;
     z-index: 5000;
+    overflow-y: scroll;
+    scrollbar-width: none;
 
-    /* overflow-y: scroll;       */
-}
+} 
 
 
 .sidebar.active{
@@ -126,10 +130,18 @@ html{
     display: none;
 }
 
+.sidebar ul li .toolbox{
+    position: relative;
+    
+}
+
 .sidebar ul li:hover .tooltip{
-    transition: all 0.5s ease;
+    transition: all 1s ease;
     opacity: 1;
-    top: 50%;
+    position: fixed;
+    top: 50px;
+    margin-left: 10px;
+    /* transform: translateY(500px); */
 }
 
 
